# un80-statements

./: .prettierrc  MVP_IMPLEMENTATION.md  README.md  iahwg-transcripts.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/chat/: page.tsx
app/json/: route.ts
app/search/: page.tsx
app/topics/: page.tsx
components/: live-transcription.tsx  rag-search.tsx  report-structure.tsx  transcription-panel.tsx  video-page-client.tsx  video-table.tsx  video-timeline.tsx  view-navigation.tsx
components/ai-elements/: artifact.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  conversation.tsx  image.tsx  inline-citation.tsx  message.tsx  model-selector.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  sources.tsx  task.tsx  tool.tsx  web-preview.tsx
components/ui/: input-group.tsx
data/db/: iahwg_rag.db
data/md/: session_1_Sep_16_2025_first_meeting_of.md  session_2_Oct_13_2025_mandate_creation_briefing.md  session_3_Oct_23_2025_mandate_creation_consultations.md  session_7_Nov_25_2025_mandate_review_briefing.md  (+3 more)
lib/: config.ts  constants.ts  iahwg-transcripts.ts  kaltura-helpers.ts  kaltura.ts  speaker-identification.ts  speakers.ts  transcription.ts  turso-rag.ts  turso.ts  un-api.ts
python/: create_db.py  iahwg_transcripts.py  query_local.py  transcripts_rag.py  verify_db.py
scripts/: check-iahwg-status.ts  exact-video-lookup.ts  export-iahwg-transcripts.ts  find-iahwg-videos.ts  measure-iahwg-tokens.ts  optimal-context-format.md  reidentify.ts  retranscribe.ts  sync-videos.ts  tag-transcripts.ts  tag-un80.ts
(+13 files in other folders)
