[project]
name = "un80-statements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "libsql>=0.1.11",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]
