[project]
name = "un80-statements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "libsql>=0.1.11",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]
